--- a/make.conf
+++ b/make.conf
@@ -5,7 +5,7 @@ ACCEPT_KEYWORDS="amd64"
 CONFIG_PROTECT="-* /etc/default/useradd /etc/dnsmasq.conf /etc/env.d/50baselayout
   /etc/env.d/70less /etc/fstab /etc/host /etc/inputrc /etc/issue /etc/kernel
   /etc/profile /etc/shells /etc/smartd.conf /etc/ssh/sshd_config /etc/sudoers
-  /etc/sysctl.conf /etc/zfs"
+  /etc/sysctl.conf /etc/zfs /etc/init.d"
 CONFIG_PROTECT_MASK="-*"
 
 FEATURES="collision-protect distlocks ipc-sandbox network-sandbox parallel-fetch parallel-install preserve-libs sandbox sfperms unmerge-orphans userfetch userpriv usersandbox xattr"
@@ -27,10 +27,6 @@ LDFLAGS="$LDFLAGS -Wl,--build-id=none -Wl,--gc-sections -Wl,--hash-style=both
     -Wl,-O1 -Wl,-z,noexecstack -Wl,-z,now -Wl,-z,relro
     -Wl,-z,text"
 
-MODULES_SIGN_KEY="/etc/kernel/kernel_key.pem"
-MODULES_SIGN_CERT="/etc/kernel/kernel_key.pem"
-MODULES_SIGN_HASH="sha256"
-
 EMERGE_DEFAULT_OPTS="${EMERGE_DEFAULT_OPTS} --jobs=24 --load-average=24"
 
 # Audio
@@ -40,7 +36,7 @@ USE="$USE -cxx -fortran -introspection -lua -luajit -perl -python -vala"
 # Compilation
 USE="$USE gmp -jemalloc nptl ocamlopt openmp -pch pic pie -tcmalloc threads"
 # Compression
-USE="$USE bzip2 lz4 lzma zlib zstd libarchive -gnu openssl"
+USE="$USE bzip2 lz4 lzma zlib zstd"
 # Databases
 USE="$USE -berkdb -gdbm -mysql -odbc -postgres sqlite"
 # Filesystems
@@ -52,13 +48,17 @@ USE="$USE curl idn ipv6 ssl -tcpd -zeroconf"
 # Rendering
 USE="$USE -X wayland dri fontconfig ncurses -gtk -qt4 -qt5 -qt6 truetype -xv"
 # Security
-USE="$USE acl caps -cracklib hardened -mhash pam pax_kernel seccomp -suid"
+USE="$USE acl caps -cracklib hardened -mhash openssl pam pax_kernel seccomp -suid"
 # Text
-USE="$USE -iconv -icu nls pcre libedit -readline unicode vim-syntax xml"
+USE="$USE gnu -iconv -icu nls pcre readline unicode vim-syntax xml"
 # Other
 USE="$USE -bindist -branding dbus -elogind -policykit git metalog -syslog"
-USE="$USE dist-kernel"
+USE="$USE dist-kernel modules-sign verify-sig"
 # NOTE: This stage was built with the bindist USE flag enabled
+
+MODULES_SIGN_KEY="/etc/kernel/kernel_key.pem"
+MODULES_SIGN_CERT="/etc/kernel/kernel_key.pem"
+MODULES_SIGN_HASH="sha512"
 
 ABI_X86="64"
 CPU_FLAGS_X86="aes avx mmx mmxext pclmul popcnt sse sse2 sse3 sse4_1 sse4_2 ssse3"
@@ -70,7 +70,7 @@ LINGUAS="en en_US"
 #PYTHON_TARGETS="python3_12 python3_13"
 #QEMU_SOFTMMU_TARGETS="aarch64 arm i386 x86_64"
 #QEMU_USER_TARGETS="aarch64 arm i386 x86_64"
-#VIDEO_CARDS=""
+VIDEO_CARDS="nouveau"
 
 # This sets the language of build output to English.
 # Please keep this setting intact when reporting bugs.
