--- a/repos.conf/gentoo.conf
+++ b/repos.conf/gentoo.conf
@@ -10,7 +10,7 @@ sync-depth = 1
 
 sync-type = git
 auto-sync = yes
-location = /var/db/repos/portage
+location = /var/db/repos/gentoo
 sync-git-verify-commit-signature = yes
 sync-openpgp-key-path = /usr/share/openpgp-keys/gentoo-release.asc
 sync-uri = https://anongit.gentoo.org/git/repo/sync/gentoo.git
