moved to gentoo portage

--- a/make.conf
+++ b/make.conf
@@ -53,7 +53,7 @@ USE="$USE acl caps -cracklib hardened -mhash openssl pam pax_kernel seccomp -sui
 USE="$USE gnu -iconv -icu nls pcre readline unicode vim-syntax xml"
 # Other
 USE="$USE -bindist -branding dbus -elogind -policykit git metalog -syslog"
-USE="$USE dist-kernel modules-sign verify-sig"
+USE="$USE dist-kernel dist-kernel-cap modules-sign verify-sig"
 # NOTE: This stage was built with the bindist USE flag enabled
 
 MODULES_SIGN_KEY="/etc/kernel/kernel_key.pem"
@@ -65,9 +65,9 @@ CPU_FLAGS_X86="aes avx mmx mmxext pclmul popcnt sse sse2 sse3 sse4_1 sse4_2 ssse
 CURL_SSL="openssl"
 L10N="en en_US"
 LINGUAS="en en_US"
-#LLVM_TARGETS="*"
-#PYTHON_SINGLE_TARGET="python3_12"
-#PYTHON_TARGETS="python3_12 python3_13"
+LLVM_TARGETS="*"
+PYTHON_SINGLE_TARGET="python3_12"
+PYTHON_TARGETS="python3_12 python3_13"
 #QEMU_SOFTMMU_TARGETS="aarch64 arm i386 x86_64"
 #QEMU_USER_TARGETS="aarch64 arm i386 x86_64"
 VIDEO_CARDS="nouveau"
