--- a/repos.conf/wandsas.conf
+++ b/repos.conf/wandsas.conf
@@ -3,6 +3,6 @@ priority = 100
 
 auto-sync = yes
 clone-depth = 0
-location = /usr/local/wandsas-overlay
+location = /var/db/repos/wandsas
 sync-type = git
 sync-uri = git@rpi3.local:repos/wandsas-overlay.git
