--- a/make.conf
+++ b/make.conf
@@ -65,9 +65,9 @@ CPU_FLAGS_X86="aes avx mmx mmxext pclmul popcnt sse sse2 sse3 sse4_1 sse4_2 ssse
 CURL_SSL="openssl"
 L10N="en en_US"
 LINGUAS="en en_US"
-LLVM_TARGETS="*"
+#LLVM_TARGETS="*"
 PYTHON_SINGLE_TARGET="python3_12"
-PYTHON_TARGETS="python3_12 python3_13"
+PYTHON_TARGETS="python3_12"
 #QEMU_SOFTMMU_TARGETS="aarch64 arm i386 x86_64"
 #QEMU_USER_TARGETS="aarch64 arm i386 x86_64"
 VIDEO_CARDS="nouveau"
