--- a/make.conf
+++ b/make.conf
@@ -52,7 +52,7 @@ USE="$USE acl caps -cracklib hardened -mhash openssl pam pax_kernel seccomp -sui
 # Text
 USE="$USE gnu -iconv -icu nls pcre readline unicode vim-syntax xml"
 # Other
-USE="$USE -bindist -branding dbus -elogind -policykit git metalog -syslog"
+USE="$USE -bindist -branding dbus -elogind -policykit git syslog"
 USE="$USE dist-kernel dist-kernel-cap modules-sign verify-sig"
 # NOTE: This stage was built with the bindist USE flag enabled
 
@@ -66,8 +66,8 @@ CURL_SSL="openssl"
 L10N="en en_US"
 LINGUAS="en en_US"
 #LLVM_TARGETS="*"
-PYTHON_SINGLE_TARGET="python3_12"
-PYTHON_TARGETS="python3_12"
+#PYTHON_SINGLE_TARGET="python3_12"
+#PYTHON_TARGETS="python3_12"
 #QEMU_SOFTMMU_TARGETS="aarch64 arm i386 x86_64"
 #QEMU_USER_TARGETS="aarch64 arm i386 x86_64"
 VIDEO_CARDS="nouveau"
