--- a/repos.conf/wandsas.conf
+++ b/repos.conf/wandsas.conf
@@ -1,8 +1,8 @@
-[wandsas]
-priority = 100
+#[wandsas]
+#priority = 100
 
-auto-sync = yes
-clone-depth = 0
-location = /var/db/repos/wandsas
-sync-type = git
-sync-uri = git@rpi3.local:repos/wandsas-overlay.git
+#auto-sync = yes
+#clone-depth = 0
+#location = /var/db/repos/wandsas
+#sync-type = git
+#sync-uri = git@rpi3.local:repos/wandsas-overlay.git
