--- a/make.conf
+++ b/make.conf
@@ -10,10 +10,13 @@ CONFIG_PROTECT_MASK="-*"
 
 FEATURES="collision-protect distlocks ipc-sandbox network-sandbox parallel-fetch parallel-install preserve-libs sandbox sfperms unmerge-orphans userfetch userpriv usersandbox xattr"
 
-PORTAGE_NICENESS="5"
 PORTAGE_TMPDIR="/tmp"
+PORTAGE_NICENESS="5"
 PORTAGE_COMPRESS="zstd"
 PORTAGE_COMPRESS_FLAGS="-13 -q --rm"
+
+EMERGE_DEFAULT_OPTS="${EMERGE_DEFAULT_OPTS} --jobs=24 --load-average=24"
+
 
 CFLAGS="$CFLAGS -fdata-sections -ffunction-sections
     -fno-asynchronous-unwind-tables -fno-common -fno-unwind-tables -g0
@@ -27,7 +30,6 @@ LDFLAGS="$LDFLAGS -Wl,--build-id=none -Wl,--gc-sections -Wl,--hash-style=both
     -Wl,-O1 -Wl,-z,noexecstack -Wl,-z,now -Wl,-z,relro
     -Wl,-z,text"
 
-EMERGE_DEFAULT_OPTS="${EMERGE_DEFAULT_OPTS} --jobs=24 --load-average=24"
 
 # Audio
 USE="$USE -alsa -libsamplerate"
@@ -52,10 +54,15 @@ USE="$USE acl caps -cracklib hardened -mhash openssl pam pax_kernel seccomp -sui
 # Text
 USE="$USE gnu -iconv -icu nls pcre readline unicode vim-syntax xml"
 # Other
-USE="$USE -bindist -branding dbus -elogind -policykit git syslog"
-USE="$USE dist-kernel dist-kernel-cap modules-sign verify-sig"
+USE="$USE -bindist -branding dbus -systemd elogind policykit git syslog"
+USE="$USE zfs zfs-kmod dist-kernel dist-kernel-cap modules-sign verify-sig"
 # NOTE: This stage was built with the bindist USE flag enabled
 
+
+QEMU_SOFTMMU_TARGETS="aarch64 arm i386 x86_64"
+QEMU_USER_TARGETS="aarch64 arm i386 x86_64"
+
+# Kernel modules signing
 MODULES_SIGN_KEY="/etc/kernel/kernel_key.pem"
 MODULES_SIGN_CERT="/etc/kernel/kernel_key.pem"
 MODULES_SIGN_HASH="sha512"
@@ -65,12 +72,13 @@ CPU_FLAGS_X86="aes avx mmx mmxext pclmul popcnt sse sse2 sse3 sse4_1 sse4_2 ssse
 CURL_SSL="openssl"
 L10N="en en_US"
 LINGUAS="en en_US"
-#LLVM_TARGETS="*"
-#PYTHON_SINGLE_TARGET="python3_12"
-#PYTHON_TARGETS="python3_12"
-#QEMU_SOFTMMU_TARGETS="aarch64 arm i386 x86_64"
-#QEMU_USER_TARGETS="aarch64 arm i386 x86_64"
+
+PYTHON_SINGLE_TARGET="python3_12"
+PYTHON_TARGETS="python3_12"
+
+INPUT_DEVICES="libinput"
 VIDEO_CARDS="nouveau"
+
 
 # This sets the language of build output to English.
 # Please keep this setting intact when reporting bugs.
