--- a/package.env
+++ b/package.env
@@ -13,11 +13,14 @@ dev-build/automake noconfig_site
 sys-devel/binutils econf_binutils
 sys-devel/gcc econf_gcc
 sys-libs/db econf_db
-sys-libs/clang-runtime clang
-sys-libs/compiler-rt clang
-sys-libs/libcxx clang
-sys-libs/libcxxabi clang
+
+llvm-core/clang-runtime clang
+llvm-runtimes/compiler-rt clang
+llvm-runtimes/libcxx clang
+llvm-runtimes/libcxxabi clang
+
 sys-libs/musl debug soname_libc
+
 www-client/firefox noeconf
 x11-libs/gtk+:3 econf_gtk3
 
