--- a/make.conf
+++ b/make.conf
@@ -50,7 +50,7 @@ USE="$USE curl idn ipv6 ssl -tcpd -zeroconf"
 # Rendering
 USE="$USE -X wayland dri fontconfig ncurses -gtk -qt4 -qt5 -qt6 truetype -xv"
 # Security
-USE="$USE acl caps -cracklib hardened -mhash openssl pam pax_kernel seccomp -suid"
+USE="$USE acl caps -cracklib hardened -mhash openssl pam seccomp -suid"
 # Text
 USE="$USE gnu -iconv -icu nls pcre readline unicode vim-syntax xml"
 # Other
@@ -73,8 +73,8 @@ CURL_SSL="openssl"
 L10N="en en_US"
 LINGUAS="en en_US"
 
-PYTHON_SINGLE_TARGET="python3_12"
-PYTHON_TARGETS="python3_12"
+PYTHON_SINGLE_TARGET="python3_13"
+PYTHON_TARGETS="python3_13"
 
 INPUT_DEVICES="libinput"
 VIDEO_CARDS="nouveau"
