--- a/repos.conf/wandsas.conf
+++ b/repos.conf/wandsas.conf
@@ -1,7 +1,7 @@
-#[wandsas]
+[wandsas]
 #priority = 100
 
-#auto-sync = yes
-#location = /var/db/repos/wandsas
-#sync-type = git
-#sync-uri = git@rpi3.local:repos/wandsas-overlay.git
+auto-sync = yes
+location = /var/db/repos/wandsas
+sync-type = git
+sync-uri = git@rpi3.local:repos/wandsas-overlay.git
